#######################################################################
# v0.13.9a (unreleased)
#######################################################################
Bugs fixed:
- Failure using system-installed (or user-installed) PEAR when
  dep_pear_deploy_path is empty

#######################################################################
# v0.13.8 (2019-12-12)
#######################################################################
New features:
- Add support for MySQL 8 (Adam Ladanyi)

Changes/improvements:
- Workaround for bug #463: .wadf-instance from primary instance leaks macros to 
  other instances

#######################################################################
# v0.13.7 (2019-11-11)
#######################################################################
New features:
- Add support for Git (Michał Kierat)

Changes/improvements:
- Add support for PHP 7.3 with mysqli (Mariusz Serwach)

#######################################################################
# v0.13.6 (2012-02-20)
#######################################################################
New features:
- #367: Add --dns-only option to wadf-reprocess
- #375: Automatically generate required directories when deploying CGI configs
- #361: Set an environment variable to indicate the verbosity level when calling
  kickstart/post-deploy scripts

Bugs fixed:
- #355: Switching of local SVN checkouts fails if existing working copy is a
  subdirectory of a branch 
- #397: Incorrectly formatted dependency-tags file causes overwrite of the
  end-user application

#######################################################################
# v0.13.5 (2010-05-20)
#######################################################################
Bugs fixed:
- #347: Further orphaned files after dependency installation due to use of 
  "pear install --force"

#######################################################################
# v0.13.4 (2010-04-28)