@@ -259,6 +259,10 @@ dep_tags_file = @deploy_path@/dependency-tags
 ; re-processing
 dep_pear_clear_cache = no
 
+; Force a specific version of the PEAR package to be installed, when creating a
+; standalone PEAR install
+;dep_pear_force_pear_version = 1.10.11
+
 ; Whether or not to enable workaround for PEAR bugs. Separate multiple options
 ; with commas.
 ; Options are:
